# dapps-ping

./: .metahash  CHANGELOG.md  Cargo.toml  Makefile  crates.js  help.html  index.html  meta.txt  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
demo_ping/: all.html  index.html
demo_ping_io/: all.html  index.html  sidebar-items.js  struct.DemoPingMetadata.html
demo_ping_state/: all.html  index.html
demo_ping_state/metafns/: fn.get_first_message.html  fn.get_last_message.html  fn.get_message.html  fn.get_messages_len.html  index.html  sidebar-items.js  type.State.html
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/gmeta/: trait.Metadata.js
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  lib.rs
src/demo_ping/: contract.rs.html  lib.rs.html
src/demo_ping_io/: lib.rs.html
src/demo_ping_state/: lib.rs.html
state/: Cargo.toml
state/src/: lib.rs
