[package]
name = "demo-ping"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true

[dev-dependencies]
gtest.workspace = true

[build-dependencies]
demo-ping-io.workspace = true
gear-wasm-builder.workspace = true

[features]
binary-vendor = []

[workspace]
members = ["state"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "cfb433a" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "cfb433a" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "cfb433a" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "cfb433a" }
demo-ping-io = { path = "io" }
